--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,6 @@
 [user]
 	name = Rob Howard
 	email = rob@robhoward.id.au
-[diff]
-	external = ~/bin/git_vimdiff_wrapper.sh
-[pager]
-	diff =
 [merge]
 	renameLimit = 10000
 [alias]
@@ -17,3 +13,5 @@
 	lg1 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%cr)%C(reset) %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
 	lg2 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%cD%C(reset) %C(bold green)(%cr)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)' --abbrev-commit
 	lg = !"git lg1"
+	d = difftool -t vimdiff
+	vimdiff = difftool -t vimdiff
