--- a/.ackrc
+++ b/.ackrc
@@ -2,7 +2,7 @@
 --follow
 
 # Add to existing types
---type-add=ruby=.haml,.rake,.rsel
+--type-add=ruby=.haml,.rake,.rsel,.ru
 
 # Extra types
 --type-set=ini=.ini
@@ -12,3 +12,7 @@
 --type-set=less=.less
 --type-set=cucumber=.feature
 --type-set=twig=.tpl
+
+# Ignores
+--ignore-dir=vendor/bundler
+--ignore-file=match:tags
