Git settings (submodules, ruby global ignores).

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,5 +18,7 @@
 	prune-all = !git remote | xargs -n 1 git remote prune
 	d = difftool -t vimdiff
 	vimdiff = difftool -t vimdiff
+[status]
+	submoduleSummary = true
 [core]
 	excludesfile = ~/.gitignore_global
