--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,9 @@
 	prune-all = !git remote | xargs -n 1 git remote prune
 	d = difftool -t vimdiff
 	vimdiff = difftool -t vimdiff
+ 	f = fetch -p
 [status]
 	submoduleSummary = true
 [core]
 	excludesfile = ~/.gitignore_global
+	editor = /usr/local/bin/vim
