--- a/.bundle/config
+++ b/.bundle/config
@@ -1,2 +1,5 @@
 ---
-BUNDLE_PATH: vendor/bundler
+BUNDLE_PATH: "vendor/bundler"
+BUNDLE_GEM__TEST: "rspec"
+BUNDLE_GEM__MIT: "true"
+BUNDLE_GEM__COC: "true"
