--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,8 @@
 	recent = for-each-ref --sort=committerdate refs/heads/ --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
 [status]
 	submoduleSummary = true
+[commit]
+	verbose = true
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = /usr/local/bin/vim
