Pretty tig branch lines.

--- a/.tigrc
+++ b/.tigrc
@@ -69,7 +69,7 @@ set diff-view	= line-number:no,interval=5 text:yes,commit-title-overflow=no
 set show-changes		= yes		# Show changes commits in the main view?
 set wrap-lines			= no		# Wrap long lines in pager views?
 set tab-size			= 8		# Number of spaces to use when expanding tabs
-set line-graphics		= default	# Enum: ascii, default, utf-8
+set line-graphics		= utf-8	# Enum: ascii, default, utf-8
 
 # Format reference names based on type.
 #  - head		: The current HEAD.
