--- a/.gitconfig
+++ b/.gitconfig
@@ -1,34 +1,47 @@
 [user]
-	name = Rob Howard
-	email = rob@robhoward.id.au
-[merge]
-	renameLimit = 10000
-	conflictstyle = diff3
-[difftool "vimdiff"]
-	cmd = vimdiff -c ':colorscheme ron' $LOCAL $REMOTE
-[alias]
-	stat = status
-	s = status
-	co = checkout
-	b = branch
-	serve = !git daemon --reuseaddr --verbose --base-path=. --export-all ./.git
-	pc = push origin HEAD
-	pcf = push origin HEAD --force-with-lease
-	lg1 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%cr)%C(reset) %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
-	lg2 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%cD%C(reset) %C(bold green)(%cr)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)' --abbrev-commit
-	lg = !"git lg1"
-	prune-all = !git remote | xargs -n 1 git remote prune
-	d = difftool -t vimdiff
-	vimdiff = difftool -t vimdiff
- 	f = fetch -p
-	recent = for-each-ref --sort=committerdate refs/heads/ --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
-[status]
-	submoduleSummary = true
-[commit]
-	verbose = true
+  name = Rob Howard
+  email = rob@robhoward.id.au
+
 [core]
-	excludesfile = ~/.gitignore_global
-	editor = /usr/local/bin/vim
+  excludesfile = ~/.gitignore_global
+  editor = /usr/local/bin/vim
+[commit]
+  verbose = true
+[diff]
+  colorMoved = plain # Show moved blocks in a different colour to added+removed blocks
+  colorWords = true # Word diffs
+[difftool "vimdiff"]
+  cmd = vimdiff -c ':colorscheme ron' $LOCAL $REMOTE
+[log]
+  decorate = full # Show if a commit is the head of remote or local branch
+[merge]
+  renameLimit = 10000
+  conflictstyle = diff3
+[pull]
+  ff = only
+[push]
+  followTags = true # Also push tags associated with commits being pushed; disable with 'git push --no-follow-tags'
+[stash]
+  showPatch = true # 'git show stash' shows the diff, like 'git show stash@{0}'
+[status]
+  submoduleSummary = true
 [rebase]
   autoStash = true
   autoSquash = true
+
+[alias]
+  co = checkout
+  d = difftool -t vimdiff
+  f = fetch -p
+  pc = push origin HEAD
+  pcf = push origin HEAD --force-with-lease
+  s = status
+  git = "!git" # Allows 'git git diff' et al to work, when Rob is being scatter-brained and types+pastes git.
+
+  lg1 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%cr)%C(reset) %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
+  lg2 = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%cD%C(reset) %C(bold green)(%cr)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(bold white)— %cn%C(reset)' --abbrev-commit
+  lg = !"git lg1"
+  recent = for-each-ref --sort=committerdate refs/heads/ --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(color:red)%(objectname:short)%(color:reset) - %(contents:subject) - %(authorname) (%(color:green)%(committerdate:relative)%(color:reset))'
+
+  serve = !git daemon --reuseaddr --verbose --base-path=. --export-all ./.git
+  prune-all = !git remote | xargs -n 1 git remote prune
