--- a/.gitconfig
+++ b/.gitconfig
@@ -45,3 +45,4 @@
 
   serve = !git daemon --reuseaddr --verbose --base-path=. --export-all ./.git
   prune-all = !git remote | xargs -n 1 git remote prune
+  csvdiff = diff --color-words --ignore-space-at-eol --word-diff-regex="[^[:space:],]+"
