--- a/.gitconfig
+++ b/.gitconfig
@@ -40,15 +40,18 @@
   autoSquash = true
 
 [alias]
+  cf = fixup-select
   co = checkout
+  cop = branch-select
   copr = "!f() { git fetch origin pull/$1/head && git checkout pr/$1; }; f" # Running 'git copr 1234' checks out PR #1234
   f = fetch -p
   pc = push origin HEAD
   pcf = push origin HEAD --force-with-lease
+  pu = push origin -u
+  puf = push origin -u --force-with-lease
   sync = "!f() { if [ -z \"$1\" ]; then echo 'Usage: git sync [remote] my-branch-to-sync'; exit 1; fi; local remote branch; if [ -z \"$2\" ]; then remote=origin; branch=$1; else remote=$1; branch=$2; fi; git fetch \"$remote\" \"${branch}:${branch}\"; }; f"
   nb = !"git checkout -b"
   nbo = "!f() { set -u; git fetch origin && git checkout -b \"$1\" origin/master; }; f"
-
   s = status
   d = difftool -t vimdiff
   csvdiff = diff --color-words --ignore-space-at-eol --word-diff-regex="[^[:space:],]+"
