--- a/.gitconfig
+++ b/.gitconfig
@@ -41,18 +41,38 @@
 
 [alias]
   cf = fixup-select
+
+  f = fetch -p
+
   co = checkout
   cop = branch-select
   copr = "!f() { git fetch origin pull/$1/head && git checkout pr/$1; }; f" # Running 'git copr 1234' checks out PR #1234
-  f = fetch -p
+  nb = !"git checkout -b"
+  nbo = "!f() { set -u; git fetch origin && git checkout -b \"$1\" \"origin/$(git trunk)\"; }; f"
+
   pc = push origin HEAD
   pcf = push origin HEAD --force-with-lease
   pu = push origin -u
   puf = push origin -u --force-with-lease
-  sync = "!f() { if [ -z \"$1\" ]; then echo 'Usage: git sync [remote] my-branch-to-sync'; exit 1; fi; local remote branch; if [ -z \"$2\" ]; then remote=origin; branch=$1; else remote=$1; branch=$2; fi; git fetch \"$remote\" \"${branch}:${branch}\"; }; f"
-  nb = !"git checkout -b"
-  nbo = "!f() { set -u; git fetch origin && git checkout -b \"$1\" origin/master; }; f"
+  prom = "!git pull --rebase origin \"$(git trunk)\""
+
+  # TODO: Remove...?
+  sync = "!f() { \
+      if [ -z \"$1\" ]; then \
+        echo 'Usage: git sync [remote] my-branch-to-sync'; \
+        exit 1; \
+      fi; \
+      local remote branch; \
+      if [ -z \"$2\" ]; then \
+        remote=origin; branch=$1; \
+      else \
+        remote=$1; branch=$2; \
+      fi; \
+      git fetch \"$remote\" \"${branch}:${branch}\"; \
+    }; f"
+
   s = status
+
   d = difftool -t vimdiff
   csvdiff = diff --color-words --ignore-space-at-eol --word-diff-regex="[^[:space:],]+"
 
@@ -63,6 +83,15 @@
 
   serve = !git daemon --reuseaddr --verbose --base-path=. --export-all ./.git
   prune-all = !git remote | xargs -n 1 git remote prune
+
+  trunk = "!f() { \
+      local trunk=\"$(git rev-parse --show-toplevel)/.gittrunk\"; \
+      if [ -f \"$trunk\" ]; then \
+        cat \"$trunk\"; \
+      else \
+        echo 'master'; \
+      fi; \
+    }; f"
 
   git = "!git" # Allows 'git git diff' et al to work, when Rob is being scatter-brained and types+pastes git.
 
