--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -80,6 +80,9 @@ cask "karabiner-elements" # messing with key bindings
 cask "muzzle" # turn off notifications during talks/streams
 cask "flux" # because Night Shift has bugs when you have multiple monitors
 cask "rectangle" # window management
+cask "soundsource" # sound routing; paid.
+cask "bitbar" # arbitrary menu-bar scripts and helpers, eg. timers
+
 cask "slowquitapps"
 
 cask "aws-vault"
@@ -90,11 +93,12 @@ cask "keycastr" # key display, good for Quicktime screen recordings if you don't
 cask "sonic-visualiser" # real-time spectral analysis tool
 cask "typora" # ignore the void for a while
 
-cask "workflowy" # organising the things
+cask "workflowy" # outliner / nested dotpoint organisation the things
 
 # Possibly needed:
 #cask "virtualbox"
-#case "tunnelblick"
+#cask "tunnelblick"
+#cask "blender"
 #brew "postgres"
 
 
