macOS: iterm2 config

--- a/macOS/com.googlecode.iterm2.plist
+++ b/macOS/com.googlecode.iterm2.plist
@@ -3915,7 +3915,7 @@ New Tab with Current Profile</string>
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
