ssh: switch away from RSA

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,8 +3,8 @@ Host *
   AddKeysToAgent yes
   IPQoS throughput # For the apartment...?
 
-Host * !*.ca.aws
-  IdentityFile ~/.ssh/id_rsa
+Host * !*.aws
+  IdentityFile ~/.ssh/id_ed25519
 
 Host pi
   HostName lcars.rhoward.id.au
