git: Show signatures in tig.

--- a/.tigrc
+++ b/.tigrc
@@ -86,14 +86,15 @@ set line-graphics		= utf-8	# Enum: ascii, default, utf-8
 set reference-format		= [branch] <tag> {remote} ~replace~
 
 # Settings controlling how content is read from Git
-set commit-order		= default	# Enum: default, topo, date, reverse (main)
-#set status-untracked-dirs	= yes		# Show files in untracked directories? (status)
-set status-show-untracked-dirs = yes		# Show files in untracked directories? (status)
-set ignore-space		= no		# Enum: no, all, some, at-eol (diff)
-set show-notes			= yes		# When non-bool passed as `--show-notes=...` (diff)
-#set diff-context		= 3		# Number of lines to show around diff changes (diff)
-#set diff-options		= -C		# User-defined options for `tig show` (diff)
-#set blame-options		= -C -C -C	# User-defined options for `tig blame` (blame)
+set commit-order		= default		# Enum: default, topo, date, reverse (main)
+#set status-untracked-dirs	= yes			# Show files in untracked directories? (status)
+set status-show-untracked-dirs = yes			# Show files in untracked directories? (status)
+set ignore-space		= no			# Enum: no, all, some, at-eol (diff)
+set show-notes			= yes			# When non-bool passed as `--show-notes=...` (diff)
+set log-options			= --show-signature
+#set diff-context		= 3			# Number of lines to show around diff changes (diff)
+set diff-options		= --show-signature	# User-defined options for `tig show` (diff)
+#set blame-options		= -C -C -C		# User-defined options for `tig blame` (blame)
 
 # Misc
 set refresh-mode		= auto		# Enum: manual, auto, after-command, periodic
