git: switch to neovim

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 
 [core]
   excludesfile = ~/.gitignore_global
-  editor = /usr/bin/env vim
+  editor = /usr/bin/env nvim
   pager = delta # https://github.com/dandavison/delta
 
 [commit]
