--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -149,12 +149,14 @@ cask "workflowy" # outliner / nested dotpoint organisation the things
 # Mac App Store
 # (To get IDs: mas list)
 
-mas "Boop", id: 1518425043 # Text scratchpad with transform scripts
-mas "Boxy", id: 611658502 # Boxy SVG
-mas "Calendarique", id: 1040634920
-mas "Connect", id: 1352696344
-mas "Fenêtre", id: 1288451627
-mas "HazeOver", id: 430798174
-mas "Sonance", id: 423666302
+mas "Boop", id: "1518425043" # Text scratchpad with transform scripts
+mas "Boxy", id: "611658502" # Boxy SVG
+mas "Calendarique", id: "1040634920"
+mas "Connect", id: "1352696344"
+mas "Desktop Pets", id: "1575542220"
+mas "Fenêtre", id: "1288451627"
+mas "HazeOver", id: "430798174"
+mas "Sonance", id: "423666302"
+mas "Pipper", id: "1587335166"
 
 # TODO: look at whalebrew for some things, eg. qmk
