ssh: config rejig, jump box setup for home+apartment

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,14 +1,11 @@
+Include ~/.ssh/config.local
+
+IgnoreUnknown UseKeychain # MacOS; ignored elsewhere
+#IgnoreUnknown AddKeysToAgent # for very old SSH clients
+
 Host *
-  UseKeychain yes # MacOS
+  UseKeychain yes
   AddKeysToAgent yes
-  IPQoS throughput # For the apartment...?
 
 Host * !*.aws
   IdentityFile ~/.ssh/id_ed25519
-
-Host pi
-  HostName lcars.rhoward.id.au
-  Port 8097
-  User pi
-
-Include ~/.ssh/config.local
