wezterm: Adds session manager, and for-compatibility old Nerdfonts (I can't upgrade my neovim setup without a bunch of stuffing around right now).

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".zprezto"]
 	path = .zprezto
 	url = https://github.com/sorin-ionescu/prezto.git
+[submodule ".config/wezterm/wezterm-session-manager"]
+	path = .config/wezterm/wezterm-session-manager
+	url = https://github.com/danielcopper/wezterm-session-manager.git
