--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -132,6 +132,7 @@ cask "flux" # because Night Shift has bugs when you have multiple monitors
 cask "rectangle" # window management
 cask "soundsource" # sound routing; paid.
 cask "bitbar" # arbitrary menu-bar scripts and helpers, eg. timers
+cask "bluesnooze" # stop MacOS waking up to steal bluetooth
 
 cask "slowquitapps"
 
