mac: okay, you finally got me, i am going to add the gnu utils.

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -6,6 +6,7 @@ tap "dteoh/sqa"
 
 # The basics:
 brew "bash" # replaces ancient bash v3 that comes with MacOS
+brew "grep" # gnu utils
 brew "git"
 brew "vim"
 brew "ack"
