--- a/.ackrc
+++ b/.ackrc
@@ -24,6 +24,7 @@
 --ignore-dir=vendor/bundler
 --ignore-file=is:tags
 --ignore-dir=dist
+--ignore-dir=target
 # Previously: --ignore-file=match:tags
 
 --noignore-dir=node_modules
